# music-history-analysis

./: .gitignore  2025-review.html  AGENTS.md  CLAUDE.md  CRITIQUE-AND-PLAN.md  DATA-ANALYSIS.md  LASTFM-SCHEMA.md  LICENSE  MCP-SYSTEM-PROMPT.md  POST.md  README.md  critics-2011.json  critics-2012.json  critics-2013.json  critics-2014.json  critics-2015.json  critics-2016.json  critics-2017.json  critics-2018.json  critics-2019.json  critics-2020.json  critics-2021.json  critics-2022.json  critics-2023.json  critics-2024.json  critics-2025-music-only.json  critics-2025.json  pyproject.toml
.claude/: settings.local.json
.codex-plugin/: plugin.json
docs/analytics/: artist-trajectories.md  life-event-windows.md  listening-change-points.md  listening-graph.md
lastfm/: __init__.py  agent_output.py  agent_tools.py  analysis_state.py  change_points.py  cli.py  cli_old.py  commands_agent.py  crawler.py  crossref.py  data.py  embeddings.py  evaluation.py  event_windows.py  lastfm_api.py  listening_graph.py  mcp_server.py  musicbrainz_db.py  release_years.py  session_client.py  session_daemon.py  spotify.py  spotify_converter.py  trajectories.py
lastfm/commands/: critics.py  eval.py  history.py  listen.py  metadata.py  (+2 more)
scripts/: install_codex_plugin.py
tests/: conftest.py  test_agent_cli.py  test_agent_output.py  test_agent_tools.py  test_analysis_state.py  test_change_points.py  test_event_windows.py  test_install_codex_plugin.py  test_listening_graph.py  test_music_history_rename.py  test_no_mcp.py  test_session_client.py  test_session_daemon.py  test_trajectories.py
(+13 files in other folders)
