[project]
name = "lastfm-analysis"
version = "0.1.0"
description = "CLI for analyzing Last.fm listening history"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "spotipy>=2.23.0",
    "musicbrainzngs>=0.7.1",
]

[project.scripts]
lastfm = "lastfm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lastfm"]
