[project]
name = "music-history-analysis"
version = "0.1.0"
description = "CLI for analyzing Last.fm listening history"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "spotipy>=2.23.0",
    "musicbrainzngs>=0.7.1",
    "pylast>=5.0.0",
    "rapidfuzz>=3.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "umap-learn>=0.5.0",
    "datamapplot>=0.4.0",
    "matplotlib>=3.7.0",
    "hdbscan>=0.8.0",
    "networkx>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
music-history = "lastfm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lastfm"]
